# sales-agent-demo

./: .gitignore  .mcp.json  README.md  demo_mcp_oauth_setup.sql  demodb_sales_setup.sql  mcp_config.json  teardown.sql
sales-dashboard/: pyproject.toml  snowflake.yml  streamlit_app.py
